# Proxy-platform

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  docker-compose.yml  findings.md  platform.manifest.yaml  progress.md  pyproject.toml  task_plan.md
apps/ops-cli/: README.md
apps/web-console/: README.md
deploy/infra-core-module/: module.env.example  redeploy_with_rollback.sh  register_module.sh
docs/: repo-boundaries.md
docs/adr/: ADR-0001-thin-shell-platform.md  ADR-0002-private-ops-boundary.md  ADR-0003-control-plane-remains-northbound-kernel.md  ADR-0004-remote-browser-provider-slot.md  ADR-0005-submodule-plus-manifest.md  ADR-0006-cliproxy-plus-worker-upgrade-authority-boundary.md  ADR-0007-single-workspace-root.md  ADR-0008-platform-state-model.md  ADR-0009-repository-ownership-matrix.md  ADR-0010-mutation-job-flow-boundary.md  ADR-0011-authority-handoff-and-operator-deployment.md  ADR-0012-operator-web-infra-core-deployment.md  ADR-0013-public-snapshot-and-private-truth-sync.md  ADR-0014-operator-web-template-shell.md  ADR-0015-runtime-truth-refresh-on-redeploy.md  ADR-0016-webchat-openai-runtime.md  ADR-0017-worker-quota-readonly-integration.md
tests/: test_cli.py  test_control_plane_read_model.py  test_deploy_runtime.py  test_infra_core_module.py  test_inventory.py  test_jobs.py  test_manifest.py  test_observation_probe.py  test_projections.py  test_providers.py  test_public_state.py  test_runtime_bootstrap.py  test_runtime_truth_sync.py  test_state.py  test_toolchain.py  test_web_app.py  test_workspace.py
(+45 files in other folders)
